# Battery_Pack_Solver

./: LICENSE  README.md  Xiao_2022_Energy_Pouch.py  Xiao_2022_Power_Pouch.py  __init__.py  component.py  component_utils.py  equation_solver.py  main.py  pyproject.toml
examples/: inconsistencies_example.py  sweep_example.py  tuning_example.py
src/Battery_Pack_Solver/: __init__.py  component.py  equation_solver.py
src/Battery_Pack_Solver/cells/: Xiao_2022_Energy_Pouch.py  Xiao_2022_Power_Pouch.py  example_cell.py
